update code gen gpt2

--- a/pytorch_gpt2_codegen.ipynb
+++ b/pytorch_gpt2_codegen.ipynb
@@ -6,7 +6,9 @@
    "source": [
     "# Code Generation using GPT2\n",
     "\n",
-    "GPT2 is LLM that is originally from OpenAI, and it's licensed under MIT License.<br>\n",
+    "In this notebook, we will use GPT2 to generate code snippets. We will use the `transformers` library by Hugging Face to load the pre-trained GPT2 model and tokenizer. We will then fine-tune the model on a dataset of code snippets. Finally, we will generate code snippets using the fine-tuned model.\n",
+    "\n",
+    "GPT2 is a LLM that is originally pre-trained by OpenAI, and it's licensed under MIT License.<br>\n",
     "https://huggingface.co/docs/transformers/en/model_doc/gpt2"
    ]
   },
@@ -23,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,36 +39,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Get Code dataset"
+    "## Get Code dataset\n",
+    "\n",
+    "[CodeSearchNet](https://huggingface.co/datasets/code_search_net) corpus is a dataset of 2 milllion (comment, code) pairs from opensource libraries hosted on GitHub. It contains code and documentation for several programming languages. Concretely, a comment is a top-level function or method comment (e.g. docstrings in Python), and code is an entire function or method. Currently, the dataset contains Python, Javascript, Ruby, Go, Java, and PHP code.\n",
+    "\n",
+    "In this notebook, we will use the `python` subset of the dataset for training and validating our fine-tuned GPT-2 model."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Found cached dataset code_search_net (/net/papilio/storage7/phusaeng/.cache/huggingface/datasets/code_search_net/python/1.0.0/8f2524e6b62f65af5f5d65c53715c654db7b08dc93e0b7bcce2ab2f286a75be1)\n",
-      "Found cached dataset code_search_net (/net/papilio/storage7/phusaeng/.cache/huggingface/datasets/code_search_net/python/1.0.0/8f2524e6b62f65af5f5d65c53715c654db7b08dc93e0b7bcce2ab2f286a75be1)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "total training samples: 412178\n",
-      "total validation samples: 23107\n",
-      "we now re-sample the data to reduce the training time:\n",
-      "Choosing 3.0% of the data for training.\n",
-      "Choosing 30.0% of the data for validation.\n",
-      "total training samples: 12365\n",
-      "total validation samples: 6932\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "code_dataset_train = load_dataset(\"code_search_net\", \"python\", split=\"train\")\n",
     "code_dataset_validation = load_dataset(\"code_search_net\", \"python\", split=\"validation\")\n",
@@ -93,32 +77,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Please write a function that Create and return an API context\n",
-      "\n",
-      "The function name is: AppBuilder.create_api_context\n",
-      "\n",
-      "def create_api_context(self, cls):\n",
-      "        \"\"\"Create and return an API context\"\"\"\n",
-      "        return self.api_context_schema().load({\n",
-      "            \"name\": cls.name,\n",
-      "            \"cls\": cls,\n",
-      "            \"inst\": [],\n",
-      "            \"conf\": self.conf.get_api_service(cls.name),\n",
-      "            \"calls\": self.conf.get_api_calls(),\n",
-      "            \"shared\": {},  # Used per-API to monitor state\n",
-      "            \"log_level\": self.conf.get_log_level(),\n",
-      "            \"callback\": self.receive\n",
-      "            })\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# visualize a sample\n",
     "df_train = code_dataset_train.to_pandas()\n",
@@ -147,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,24 +131,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Loading cached processed dataset at /net/papilio/storage7/phusaeng/.cache/huggingface/datasets/code_search_net/python/1.0.0/8f2524e6b62f65af5f5d65c53715c654db7b08dc93e0b7bcce2ab2f286a75be1/cache-6af430db4a196fa8_*_of_00016.arrow\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Loading cached processed dataset at /net/papilio/storage7/phusaeng/.cache/huggingface/datasets/code_search_net/python/1.0.0/8f2524e6b62f65af5f5d65c53715c654db7b08dc93e0b7bcce2ab2f286a75be1/cache-696e155c3838fd2f_*_of_00016.arrow\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# preparing prompt and encode text to token ids with tokenizer\n",
     "def preprocess_function(examples):\n",
@@ -219,18 +165,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Loading cached processed dataset at /net/papilio/storage7/phusaeng/.cache/huggingface/datasets/code_search_net/python/1.0.0/8f2524e6b62f65af5f5d65c53715c654db7b08dc93e0b7bcce2ab2f286a75be1/cache-4aecb19653e8f685_*_of_00016.arrow\n",
-      "Loading cached processed dataset at /net/papilio/storage7/phusaeng/.cache/huggingface/datasets/code_search_net/python/1.0.0/8f2524e6b62f65af5f5d65c53715c654db7b08dc93e0b7bcce2ab2f286a75be1/cache-e8b4402d3571009b_*_of_00016.arrow\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# after tokenized it, some samples may have the length that is longer than \n",
     "# the context size of the GPT2, which is 1024 in this case.\n",
@@ -274,20 +211,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Loading cached shuffled indices for dataset at /net/papilio/storage7/phusaeng/.cache/huggingface/datasets/code_search_net/python/1.0.0/8f2524e6b62f65af5f5d65c53715c654db7b08dc93e0b7bcce2ab2f286a75be1/cache-80196fec92e45b46.arrow\n",
-      "/net/papilio/storage6/phusaeng/anaconda3/envs/pytorch2/lib/python3.10/site-packages/accelerate/accelerator.py:432: FutureWarning: Passing the following arguments to `Accelerator` is deprecated and will be removed in version 1.0 of Accelerate: dict_keys(['dispatch_batches', 'split_batches', 'even_batches', 'use_seedable_sampler']). Please pass an `accelerate.DataLoaderConfiguration` instead: \n",
-      "dataloader_config = DataLoaderConfiguration(dispatch_batches=None, split_batches=False, even_batches=True, use_seedable_sampler=True)\n",
-      "  warnings.warn(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "run_name = \"gpt2-python-code-search-test\"\n",
     "out_dir = f\"out/{run_name}\"\n",
@@ -324,7 +250,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "trainer.train()"
+    "import time\n",
+    "\n",
+    "tick = time.time()\n",
+    "trainer.train()\n",
+    "tock = time.time()\n",
+    "print(f\"Training took {tock - tick:.2f} seconds\")"
    ]
   },
   {
@@ -336,17 +267,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Found cached dataset code_search_net (/net/papilio/storage7/phusaeng/.cache/huggingface/datasets/code_search_net/python/1.0.0/8f2524e6b62f65af5f5d65c53715c654db7b08dc93e0b7bcce2ab2f286a75be1)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "code_dataset_validation = load_dataset(\"code_search_net\", \"python\", split=\"validation\")\n",
     "df_valid = code_dataset_validation.to_pandas()"
@@ -361,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -408,17 +331,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "model params: 124439808\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "device = \"cuda\"\n",
     "tokenizer = AutoTokenizer.from_pretrained(\"gpt2\")\n",
@@ -444,20 +359,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "idx: 29845\n",
-      "prompt: Please write a function that Return the version of by with regex intead of importing it\n",
-      "\n",
-      "The function name is: get_version\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "text = get_prompt(df_train, idx=None)\n",
     "# text = \"please write the function that find cosine similarity between two vectors\"\n",
@@ -467,57 +371,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Please write a function that Return the version of by with regex intead of importing it\n",
-      "\n",
-      "The function name is: get_version_of_by\n",
-      "\n",
-      "It returns the version, if it has a version. If the version is not empty you can pass either 0 or nil.\n",
-      "\n",
-      "If version is empty do:\n",
-      "\n",
-      "get_version :(version, _) => nil | json:value @json\n",
-      "\n",
-      "It returns the version number with the hash of the version used.\n",
-      "\n",
-      "The function accepts the following arguments:\n",
-      "\n",
-      "version: number of the version of JSON or JSON.string\n",
-      "\n",
-      "json: string to use in converting the json type to json:string. If no arguments are provided it will just pass 0 and get_version_ref is passed as the string.\n",
-      "\n",
-      "The json value will be stored on disk in memory. The json version will be the current one.\n",
-      "\n",
-      "Return the number of versions of a given version string (or a reference to the original JSON) to be converted to JSON with get_version_ref if None is given.\n",
-      "\n",
-      "The function will not return 0 or None if the json is not available for this format.\n",
-      "\n",
-      "If the json value is greater than or equal to 0 or any other type that is available for this format in a format as format and json.string does not match:\n",
-      "\n",
-      "json: json_string => 0\n",
-      "\n",
-      "If the json value is not greater than or equal to NaN, json: n == N, json: n <= 1, json: n <= N.\n",
-      "\n",
-      "The function will NOT return a None if this format.\n",
-      "\n",
-      "If you want to convert one of jsons to a type and return None the value will be passed as the result of a check.\n",
-      "\n",
-      "To convert JSON to N or NaN, json can be used for the conversion of strings, but this is required because N does not meet the standard N-type conversion. You can do other conversions by using json:value -like json:type.\n",
-      "\n",
-      "If json is not available and you want the json type to match for the JSON with which you want a reference - N, but json:N=N will throw an exception if NaN is not provided.\n",
-      "\n",
-      "You can provide JSON :value or json:type with json:type, but json does not have an argument type, json:type will be passed as a default value. If this is not used if json in the default format doesn't accept N, use json:value. You can write a method that returns any other type that would return a value like json:name\n",
-      "\n",
-      "JSON\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(generate(\n",
     "    model=org_model, \n",
@@ -538,36 +394,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Please write a function that Return the version of by with regex intead of importing it\n",
-      "\n",
-      "The function name is: get_version\n",
-      "\n",
-      "def get_version(self):\n",
-      " from sys import sys import regex_intead\n",
-      " version = regex.decode(self.version, re.SEMOTIC('-1-',(2,3,4) for i in re.samples.layers())):\n",
-      " if not version[0] except NotImplementedError:\n",
-      " version.update(self.version)\n",
-      "version = regex.decode(self.version, re.SEMOTIC('-1-',(2,3,4) for i in re.samples.layers())):\n",
-      " version = regex.decode(self.version, re.SEMOTIC('-1-',(2,3,4) for i in re.samples.layers())):\n",
-      " version = regex.decode(self.version, re.SEMOTIC('-1-',(2,3,4) for i in re.samples.layers())):\n",
-      " version = regex.decode(self.version, re.SEMOTIC('-1-',(2,3,4) for i in re.samples.layers())):\n",
-      " version = regex.decode(self.version, re.SEMOTIC('-1-',(2,3,4) for i in re.samples.layers())):\n",
-      " version = regex.decode(self.version, re.SEMOTIC('-1-',(2,3,4) for i in re.samples.layers())):\n",
-      " version = regex.decode(self.version, re.SEMOTIC('-1-',(2,3,4) for i in re.samples.layers())):\n",
-      " version = regex.decode(self.version, re.SEMOTIC('-1-',(2,3,4) for i in re.samples.layers())):\n",
-      " version = regex.decode(self.version, re.SEMOTIC('-1-',(2,3,4) for i in re.samples.layers())):\n",
-      " version = regex.decode(self.version, re.SEMOTIC('-1-',(2,3,4) for i in re.samples.layers())):\n",
-      " version = regex.decode(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(generate(\n",
     "    model=trained_model, \n",
@@ -588,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -650,122 +479,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Token indices sequence length is longer than the specified maximum sequence length for this model (79384 > 1024). Running this sequence through the model will result in indexing errors\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "seq_len: 79384, max_length: 1024\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "  0%|          | 0/156 [00:00<?, ?it/s]"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 99%|█████████▊| 154/156 [00:11<00:00, 13.46it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Cross-entropy loss: 1.9215\n",
-      "Perplexity: 6.8309\n",
-      "seq_len: 79384, max_length: 1024\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 99%|█████████▊| 154/156 [00:11<00:00, 13.42it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Cross-entropy loss: 1.5223\n",
-      "Perplexity: 4.5826\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>model_name</th>\n",
-       "      <th>CSE</th>\n",
-       "      <th>PPL</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>GPT2</td>\n",
-       "      <td>1.921461</td>\n",
-       "      <td>6.830929</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>GPT2 /w ft</td>\n",
-       "      <td>1.522273</td>\n",
-       "      <td>4.582630</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   model_name       CSE       PPL\n",
-       "0        GPT2  1.921461  6.830929\n",
-       "1  GPT2 /w ft  1.522273  4.582630"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
