--- a/pytorch_gpt2_codegen.ipynb
+++ b/pytorch_gpt2_codegen.ipynb
@@ -68,7 +68,7 @@
     "print(f\"Choosing {training_percentage*100}% of the data for training.\")\n",
     "print(f\"Choosing {validation_percentage*100}% of the data for validation.\")\n",
     "\n",
-    "code_dataset_train = trainDataPct(code_dataset_train, pct=training_percentage) # 7.5% of the data = 30913 training samples\n",
+    "code_dataset_train = trainDataPct(code_dataset_train, pct=training_percentage)\n",
     "code_dataset_validation = trainDataPct(code_dataset_validation, pct=validation_percentage)\n",
     "\n",
     "print(f\"total training samples: {code_dataset_train.num_rows}\")\n",
