--- a/pytorch_tensor_intro.ipynb
+++ b/pytorch_tensor_intro.ipynb
@@ -48,6 +48,10 @@
         "id": "uYQtTNDy5Btd"
       },
       "source": [
+        "# if you run this notebook on TSUBAME, you have to run the following code without comment out\n",
+        "# !pip install torch\n",
+        "# !pip install matplotlib\n",
+        "\n"
         "import torch\n",
         "import torch.nn as nn\n",
         "import matplotlib.pyplot as plt\n",
