--- a/pytorch_llm_apps.ipynb
+++ b/pytorch_llm_apps.ipynb
@@ -25,7 +25,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# !pip install transformers datasets"
+    "!pip install transformers datasets"
    ]
   },
   {
