--- a/try_dialogue_system.ipynb
+++ b/try_dialogue_system.ipynb
@@ -30,7 +30,7 @@
         "\n",
         "Reference/参考リンク:<br>\n",
         "https://huggingface.co/microsoft/Phi-3.5-mini-instruct\n",
-        "https://huggingface.co/openai/whisper-large-v3\n",
+        "https://huggingface.co/openai/whisper-large-v3-turbo\n",
         "\n",
         "\n",
         "## Installing required libraries\n",
@@ -125,7 +125,7 @@
       "source": [
         "device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
         "torch_dtype = torch.float16 if torch.cuda.is_available() else torch.float32\n",
-        "model_id = \"openai/whisper-large-v3\"\n",
+        "model_id = \"openai/whisper-large-v3-turbo\"\n",
         "\n",
         "w_model = AutoModelForSpeechSeq2Seq.from_pretrained(\n",
         "    model_id, torch_dtype=torch_dtype, low_cpu_mem_usage=True, use_safetensors=True\n",
