--- a/try_dialogue_system.ipynb
+++ b/try_dialogue_system.ipynb
@@ -50,7 +50,7 @@
       },
       "outputs": [],
       "source": [
-        "!pip install transformers torchaudio datasets"
+        "!pip install transformers torchaudio datasets flash-attn accelerate"
       ]
     },
     {
@@ -173,6 +173,7 @@
         "## Record your voice\n",
         "You can record your voice to say to the dialogue system.<br>\n",
         "To use this function, you need to permit authority on the dialogue window that demand to use microphone.<br>\n",
+        "After permitting authority, please run this cell once again.<br>\n",
         "Push `録音開始` button to start recording and push `録音停止` button to finish recording.<br>\n",
         "During recording, the message <font color=\"red\">録音中</font> will be displayed.<br>\n",
         "You can push `録音開始` and `録音停止` button whenever you want to record new voice.<br>\n",
@@ -180,6 +181,7 @@
         "\n",
         "対話システムに渡すための音声を録音することができます。<br>\n",
         "この機能を使用されるにあたっては、マイクの利用を許可する旨のダイアログにおいて、権限を許可する必要があります。<br>\n",
+        "権限を許可した後は、もう一度このセルを実行してください。<br>\n",
         "`録音開始`ボタンを押すと録音を開始でき、`録音停止`ボタンを押すと録音を終了できます。<br>\n",
         "録音中は、<font color=\"red\">録音中</font> という文字が表示されます。<br>\n",
         "新しい音声を録音したいとき、`録音開始`ボタンおよび`録音停止`ボタンは何回でも押せます。<br>\n",
