--- a/pytorch_gpt2_codegen.ipynb
+++ b/pytorch_gpt2_codegen.ipynb
@@ -249,7 +249,7 @@
         "training_args = TrainingArguments(\n",
         "    output_dir=out_dir,\n",
         "    run_name=run_name,\n",
-        "    evaluation_strategy=\"steps\",\n",
+        "    eval_strategy=\"steps\",\n",
         "    num_train_epochs=epochs,\n",
         "    per_device_train_batch_size=batch_size,\n",
         "    per_device_eval_batch_size=batch_size,\n",
@@ -623,6 +623,11 @@
     }
   ],
   "metadata": {
+    "accelerator": "GPU",
+    "colab": {
+      "gpuType": "T4",
+      "provenance": []
+    },
     "kernelspec": {
       "display_name": "Python 3",
       "name": "python3"
@@ -638,12 +643,7 @@
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
       "version": "3.10.10"
-    },
-    "colab": {
-      "provenance": [],
-      "gpuType": "T4"
-    },
-    "accelerator": "GPU"
+    }
   },
   "nbformat": 4,
   "nbformat_minor": 0
