--- a/pytorch_llm_intro.ipynb
+++ b/pytorch_llm_intro.ipynb
@@ -76,7 +76,7 @@
       "source": [
         "# Load ELI5 dataset\n",
         "# eli5 = load_dataset(\"eli5\", split=\"train_asks[:5000]\")\n",
-        "eli5 = load_dataset(\"rexarski/eli5_category\", split=\"train[:5000]\", revision="convert/parquet")\n",
+        "eli5 = load_dataset(\"rexarski/eli5_category\", split=\"train[:5000]\", revision=\"convert/parquet\")\n",
         "eli5 = eli5.train_test_split(test_size=0.2)\n",
         "eli5 = eli5.flatten()\n",
         "print(f'dataset:\\n{eli5}')"
