--- a/pytorch_llm_intro.ipynb
+++ b/pytorch_llm_intro.ipynb
@@ -59,7 +59,13 @@
         "\n",
         "from datasets import load_dataset\n",
         "from transformers import AutoTokenizer\n",
-        "from transformers import AutoModelForCausalLM, TrainingArguments, Trainer"
+        "from transformers import AutoModelForCausalLM, TrainingArguments, Trainer\n",
+        "\n",
+        "enable_wandb = False\n",
+        "\n",
+        "if not enable_wandb:\n",
+        "    import wandb\n",
+        "    wandb.init(mode=\"disabled\")"
       ]
     },
     {
