--- a/pytorch_rl_intro.ipynb
+++ b/pytorch_rl_intro.ipynb
@@ -315,7 +315,7 @@
       "source": [
         "#evaluate_policy() returns the mean and std of the rewards of the our trained model\n",
         "\n",
-        "mean_reward, std_reward = evaluate_policy(agent, env, n_eval_episodes=20, render=False)\n",
+        "mean_reward, std_reward = evaluate_policy(agent, test_env, n_eval_episodes=20, render=False)\n",
         "env.close()\n",
         "print(f\"Mean reward: {mean_reward}\")\n",
         "print(f\"Std reward: {std_reward}\")\n"
