--- a/pytorch_gpt2_codegen.ipynb
+++ b/pytorch_gpt2_codegen.ipynb
@@ -23,7 +23,7 @@
       "outputs": [],
       "source": [
         "# installation\n",
-        "!pip install transformers[torch] datasets\n",
+        "!pip install transformers[torch] datasets==2.19.1\n",
         "!pip install accelerate -U"
       ]
     },
